src/styles/index.scss
@charset "utf-8";
@import "../../node_modules/bootstrap/scss/bootstrap.scss";
@import "../../node_modules/leaflet/dist/leaflet.css";
@import "hamburger.css";

body {
  overflow-x: hidden;
}

#map {
  min-width: 100vw;
}

.car-park-marker {
  text-align: center;
  line-height: 30px;

  i {
    font-size: 30px;

    &.busy {
      color: #dc3545;
    }
  }
}

#city-status {
  position: absolute;
  left: 2rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 500;
  text-align: center;

  i {
    font-size: 36px;
    display: block;
  }
}

.carpark-section {
  header {
    padding: 2rem;
    text-align: center;
  }

  .carpark-list-item span.badge {
    padding: 0.6em;
  }
}

#sidebar-wrapper {
  position: relative;
  min-height: 100vh;
  margin-left: -15rem;
  -webkit-transition: margin .25s ease-out;
  -moz-transition: margin .25s ease-out;
  -o-transition: margin .25s ease-out;
  transition: margin .25s ease-out;
  z-index: 600;

  .sidebar-toggle {
    background-color: #dc3545;
    position: relative;
    left: 15rem;
    top: 1rem;
    z-index: 500;
    border-radius: 0 $border-radius $border-radius 0;

    &:focus {
      outline: none;
      -webkit-box-shadow: none;
      box-shadow: none;
    }
  }

  .sidebar-heading {
    padding: 0.875rem 1.25rem;
    font-size: 1.2rem;
    margin-top: -2rem;
  }

  .list-group {
    width: 15rem;
  }

  .sidebar-footer {
    position: absolute;
    bottom: 0;
    padding: 0.5rem;

    a:hover {
      text-decoration: none;
    }
  }
}

#aboutModal .partners {
  .row {
    margin: 4rem 0;

    div {
    text-align: center;

      img {
        display: inline-block;
        max-width: 80%;
        max-height: 8rem;
      }
    }
  }
}

#wrapper.toggled #sidebar-wrapper {
  margin-left: 0;
}

@media (min-width: 768px) {
  #sidebar-wrapper {
    margin-left: 0;
  }

  #map {
    min-width: 0;
    width: 100%;
  }

  #wrapper.toggled #sidebar-wrapper {
    margin-left: -15rem;
  }

  #city-status {
    left: 17rem;
    text-align: left;

    i {
      display: inline;
      font-size: inherit;
    }
  }
}

